--- a/U_tag_7/app/src/main/res/menu/main.xml
+++ b/U_tag_7/app/src/main/res/menu/main.xml
@@ -22,5 +22,10 @@
         android:title="중지"
         android:visible="false"
         app:showAsAction="ifRoom" />
-
+    <item
+        android:id="@+id/action_reset"
+        android:orderInCategory="100"
+        android:title="초기화"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
 </menu>
