S_tag_tool D5 기능 추가

--- a/S_Tag_Tool/S_Tag_Tool/app/src/main/res/values/tag_type.xml
+++ b/S_Tag_Tool/S_Tag_Tool/app/src/main/res/values/tag_type.xml
@@ -6,5 +6,6 @@
         <item>00C9</item>
         <item>00CA</item>
         <item>0007</item>
+        <item>00D5</item>
     </string-array>
 </resources>
