--- a/S_Tag_Tool/S_Tag_Tool/app/src/main/res/layout/fragment_main.xml
+++ b/S_Tag_Tool/S_Tag_Tool/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -109,24 +110,55 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
-            tools:listitem="@layout/recyclerview_item" />
-        <TextView
-            android:id="@+id/empty_scan_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="10"
-            android:visibility="gone"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:text="BLE 스캔 중" />
-        <TextView
+            tools:listitem="@layout/recyclerview_item"
+            android:visibility="gone"/>
+
+            <LinearLayout
+                android:id="@+id/empty_scan_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:visibility="gone">
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:backgroundTint="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ble_scan4" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:text="디바이스를 찾지 못했습니다."/>
+            </LinearLayout>
+        <LinearLayout
             android:id="@+id/empty_stop_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="10"
+            android:orientation="vertical"
+            android:layout_gravity="center"
             android:visibility="gone"
-            android:textColor="@color/black"
+            android:gravity="center">
+            <ImageView
+                android:backgroundTint="@color/black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ble_disc" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             android:text="BLE 스캔 중지" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
