--- a/S_Tag_Tool/S_Tag_Tool/app/src/main/res/layout/recyclerview_item.xml
+++ b/S_Tag_Tool/S_Tag_Tool/app/src/main/res/layout/recyclerview_item.xml
@@ -19,7 +19,7 @@
         android:id="@+id/linearbackcolorlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/red">
+        android:background="@color/white">
     <LinearLayout
         android:id="@+id/imageView3"
         android:layout_width="0dp"
@@ -125,7 +125,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:text="data"
+            android:text="데이터 없음"
             android:textColor="@color/black"
             android:textSize="21sp" />
         <TextView
