--- a/inner_S_Tool/app/src/main/res/drawable-v24/true_false_design.xml
+++ b/inner_S_Tool/app/src/main/res/drawable-v24/true_false_design.xml
@@ -14,7 +14,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:padding="10dp"
             android:shape="rectangle" >
-            <solid android:color="#808080" />
+            <solid android:color="@color/gray2" />
             <stroke android:color="#000000" android:width="1dp" />
 
 
