--- a/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
+++ b/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
@@ -66,7 +66,7 @@
                     android:layout_height="match_parent"
                     android:textColor="@color/white"
                     android:backgroundTint="@color/black"
-                    android:text="연결"
+                    android:text="출입"
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
                     android:textSize="15sp"
