--- a/inner_S_Tool/app/src/main/res/layout/activity_splash.xml
+++ b/inner_S_Tool/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,14 +11,23 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="vertical">
-
-        <TextView
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:text="inner S"
+            android:textColor="@color/black"
+            app:srcCompat="@drawable/inner_splash_android" />
+     <!--   <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="147dp"
             android:layout_gravity="center"
             android:text="inner S"
             android:textColor="@color/black"
-            android:textSize="50dp" />
+            android:textSize="50dp" />-->
     </LinearLayout>
+
+
 </LinearLayout>
