--- a/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
+++ b/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
@@ -46,17 +46,26 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="6"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/device_name"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
+                        android:layout_weight="1"
                         android:gravity="center|left"
                         android:text="name"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
 
+                    <TextView
+                        android:id="@+id/device_data"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:textSize="14sp"
+                        tools:visibility="gone" />
 
                 </LinearLayout>
                 <Button
@@ -74,12 +83,7 @@
                     tools:ignore="SmallSp" />
 
             </LinearLayout>
-            <TextView
-                android:id="@+id/device_data"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
