--- a/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
+++ b/inner_S_Tool/app/src/main/res/layout/recyclerview_item.xml
@@ -19,6 +19,12 @@
         android:id="@+id/linearbackcolorlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
+        android:background="@color/white">
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@color/white">
 
         <LinearLayout
@@ -86,4 +92,5 @@
 
         </LinearLayout>
     </LinearLayout>
+</LinearLayout>
 </LinearLayout>
