--- a/inner_S_Tool/app/src/main/res/menu/main.xml
+++ b/inner_S_Tool/app/src/main/res/menu/main.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/exit"
+        android:orderInCategory="100"
+        android:title="종료"
+        app:showAsAction="always"/>
+    <item
         android:id="@+id/logout"
         android:orderInCategory="100"
         android:title="로그아웃"
