--- a/inner_S_Tool/app/src/main/res/values/themes.xml
+++ b/inner_S_Tool/app/src/main/res/values/themes.xml
@@ -2,10 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.Inner_S_Tool" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/gray2</item>
         <item name="android:textColor">@color/black</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/gray3</item>
+        <item name="colorOnPrimary">@color/gray2</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/white</item>
