inner_S 서버주소변경,카드뷰 추가

--- a/inner_S_Tool/app/src/main/res/values/themes.xml
+++ b/inner_S_Tool/app/src/main/res/values/themes.xml
@@ -15,4 +15,11 @@
     </style>
 
     <style name="Theme.Notitel" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="Theme.Nocardview" parent="Theme.AppCompat.Light.NoActionBar" >
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
 </resources>
