--- a/inner_S_Tool/app/src/main/res/drawable/card_design.xml
+++ b/inner_S_Tool/app/src/main/res/drawable/card_design.xml
@@ -12,4 +12,5 @@
         android:right="0dp"
         android:bottom="0dp"
         />
+    <stroke android:color="@color/gray" android:width="1dp" />
 </shape>
