inner_S 카드뷰디자인변경,삼성중공업 엑셀파일

--- a/inner_S_Tool/app/src/main/res/drawable/card_design.xml
+++ b/inner_S_Tool/app/src/main/res/drawable/card_design.xml
@@ -4,7 +4,7 @@
         android:radius="20dp"
         />
     <solid
-        android:color="#D3D3D3"
+        android:color="@color/gray2"
         />
     <padding
         android:left="0dp"
