--- a/S_Tag_Tool/app/src/main/res/layout/activity_connect.xml
+++ b/S_Tag_Tool/app/src/main/res/layout/activity_connect.xml
@@ -134,14 +134,14 @@
                 android:layout_marginBottom="1dp"
                 android:background="@drawable/textview_design"
                 android:gravity="left|center"
-                android:hint=""
+                android:hint="0"
                 android:inputType="number"
                 android:maxLength="8"
                 android:paddingStart="5dp"
                 android:paddingEnd="0dp"
                 android:text=""
                 android:textColor="@color/black"
-                android:textColorHint="@color/blue"
+                android:textColorHint="@color/black"
                 android:textSize="10pt" />
         </LinearLayout>
 
