inner_s_user update

--- a/inner_S_user/app/src/main/res/values/colors.xml
+++ b/inner_S_user/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="gray">#D3D3D3</color>
     <color name="red">#FF0000</color>
     <color name="blue">#000080</color>
+    <color name="blue2">#0067A3</color>
+    <color name="blue3">#64F2FF</color>
     <color name="sky">#0055FF</color>
     <color name="yellow">#FFFF00</color>
     <color name="yellow2">#FBB240</color>
