--- a/inner_S_user/app/src/main/res/layout/activity_main2.xml
+++ b/inner_S_user/app/src/main/res/layout/activity_main2.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="top|center"
     android:background="@color/white"
     android:orientation="vertical">
@@ -18,7 +19,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.7"
             android:paddingStart="20sp"
-            android:paddingEnd="20sp"
+            android:paddingEnd="10sp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -27,17 +28,26 @@
                 android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:textColor="@color/black"
-                android:text="ID  : "
+                android:text="ID   "
+                android:includeFontPadding="false"
                 android:textSize="20sp"
+                android:textStyle="bold"
                 android:paddingStart="0dp"
                 android:paddingEnd="0dp"
                 android:gravity="center|right" />
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="2sp"
+                android:background="@color/gray"/>
             <TextView
                 android:id="@+id/IDname"
                 android:layout_width="0dp"
                 android:layout_weight="3"
                 android:layout_height="match_parent"
                 android:textSize="20sp"
+                android:textStyle="bold"
+                android:includeFontPadding="false"
                 android:textColor="@color/black"
                 android:gravity="center" />
 
@@ -46,10 +56,16 @@
                 android:layout_width="0dp"
                 android:layout_weight="1.5"
                 android:layout_height="match_parent"
+                android:layout_marginTop="3sp"
+                android:layout_marginBottom="3sp"
+                android:paddingTop="10sp"
+                android:paddingBottom="10sp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/sky"
+                android:textStyle="bold"
                 android:text="로그인"
-                android:gravity="center" />
+                android:gravity="center"
+                app:autoSizeTextType="uniform"/>
         </LinearLayout>
         <View
             android:layout_width="match_parent"
@@ -60,6 +76,7 @@
             android:layout_height="0dp"
             android:layout_weight="0.6"
             android:gravity="center"
+            android:padding="10sp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/login_fail"
@@ -67,6 +84,9 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:textSize="17sp"
+                android:padding="5sp"
+                android:includeFontPadding="false"
+                app:autoSizeTextType="uniform"
                 android:textColor="@color/black"
                 android:gravity="center" />
         </LinearLayout>
@@ -74,7 +94,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.7"
+        android:layout_weight="1.5"
         android:background="@drawable/textdesign"
         android:gravity="center"
         android:orientation="vertical">
@@ -83,12 +103,14 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:paddingStart="0sp"
+            android:paddingEnd="10sp"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:paddingStart="5sp"
+                android:paddingStart="0sp"
                 android:paddingEnd="0sp"
                 android:orientation="horizontal">
 
@@ -97,17 +119,22 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:gravity="center|end"
-                    android:textSize="15sp"
-                    android:text="Sector : "
+                    android:textSize="17sp"
+                    android:text="Sector  "
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
-
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="2sp"
+                    android:background="@color/gray"/>
                 <Spinner
                     android:id="@+id/Sector_spinner"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="3.5"
                     android:layout_height="match_parent"
-
+                    android:layout_marginEnd="20sp"
                     android:layout_gravity="center"
                     android:dropDownWidth="150sp"
                     android:gravity="center"
@@ -127,7 +154,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-
+            android:paddingStart="0sp"
+            android:paddingEnd="10sp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -142,16 +170,21 @@
                     android:layout_weight="1"
                     android:layout_height="match_parent"
                     android:gravity="center|end"
-                    android:textSize="15sp"
-                    android:text="Level : "
+                    android:textSize="17sp"
+                    android:text="Level  "
+                    android:includeFontPadding="false"
                     android:textColor="@color/black"
                     android:textStyle="bold" />
-
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/gray"/>
                 <Spinner
                     android:id="@+id/Floor_Spinner"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
+                    android:layout_weight="3.5"
                     android:layout_height="match_parent"
+                    android:layout_marginEnd="20sp"
                     android:layout_gravity="center"
                     android:dropDownWidth="150sp"
                     android:gravity="center"
@@ -177,73 +210,76 @@
                 android:layout_weight="4"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="5dp"
+                android:includeFontPadding="false"
                 android:gravity="center"
-
-                android:textSize="17sp"
+                android:textSize="19sp"
                 android:textColor="@color/black" />
+
             <Button
                 android:id="@+id/Level_post_result_button"
                 android:layout_width="0dp"
-                android:layout_weight="1.4"
                 android:layout_height="match_parent"
+                android:layout_marginTop="3sp"
+                android:layout_marginBottom="3sp"
+                android:layout_weight="1.4"
                 android:backgroundTint="@color/sky"
+                android:ellipsize="marquee"
+                android:text="레벨 전송"
                 android:textColor="@color/white"
-                android:text="레벨 전송"/>
+                android:textStyle="bold"
+                app:autoSizeTextType="uniform" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.2"
-        android:background="@drawable/textdesign"
-        android:gravity="center"
-        android:orientation="vertical">
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"/>
-    <TextView
-        android:id="@+id/TextView1"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="전송 중지"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:gravity="center" />
-    <Button
-        android:id="@+id/Button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="시작"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/sky"
-        android:gravity="center" />
-    </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"/>
+
+
 
     <TextView
         android:id="@+id/mMessge"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:includeFontPadding="false"
+        android:layout_weight="2"
         android:textColor="@color/black"
         android:gravity="center" />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"/>
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.6"
+        android:background="@drawable/textdesign"
+        android:gravity="center"
+        android:paddingStart="0sp"
+        android:paddingEnd="10sp"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/TextView1"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="5dp"
+            android:includeFontPadding="false"
+            android:text="전송 중지"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:gravity="center" />
+        <Button
+            android:id="@+id/Button1"
+            android:layout_width="0dp"
+            android:layout_weight="1.4"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/sky"
+            android:textColor="@color/white"
+            android:layout_marginTop="3sp"
+            android:layout_marginBottom="3sp"
+            android:text="시작"
+            app:autoSizeTextType="uniform"
+            android:textStyle="bold"/>
 
-        android:textColor="@color/black"
-        android:gravity="center" />
+    </LinearLayout>
 </LinearLayout>
