--- a/inner_S_user/app/src/main/res/layout/spinner_item.xml
+++ b/inner_S_user/app/src/main/res/layout/spinner_item.xml
@@ -9,7 +9,7 @@
     android:gravity="center"
     android:textStyle="bold"
     android:textColor="#000000"
-    android:background="@color/gray"
+    android:background="@color/white"
     android:singleLine="true"
     android:ellipsize="marquee"
     android:textAlignment="inherit"
