--- a/inner_S_user/app/src/main/res/layout/activity_main2.xml
+++ b/inner_S_user/app/src/main/res/layout/activity_main2.xml
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.7"
+            android:layout_weight="0.4"
             android:paddingStart="20sp"
             android:paddingEnd="10sp"
             android:gravity="center"
@@ -58,8 +58,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="3sp"
                 android:layout_marginBottom="3sp"
-                android:paddingTop="10sp"
-                android:paddingBottom="10sp"
+                android:paddingTop="15sp"
+                android:paddingBottom="15sp"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/sky"
                 android:textStyle="bold"
@@ -91,14 +91,15 @@
                 android:gravity="center" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.5"
+        android:layout_weight="0.5"
         android:background="@drawable/textdesign"
         android:gravity="center"
         android:orientation="vertical">
-        <LinearLayout
+      <!--  <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -192,7 +193,7 @@
                     android:spinnerMode="dropdown"
                     android:textColor="@color/black" />
             </LinearLayout>
-        </LinearLayout>
+        </LinearLayout>-->
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
@@ -222,14 +223,18 @@
                 android:layout_marginTop="3sp"
                 android:layout_marginBottom="3sp"
                 android:layout_weight="1.4"
+                android:paddingTop="12sp"
+                android:paddingBottom="12sp"
                 android:backgroundTint="@color/sky"
                 android:ellipsize="marquee"
-                android:text="레벨 전송"
+                android:text="기압 전송"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
+
     </LinearLayout>
+
 
 
 
@@ -240,13 +245,49 @@
 
 
 
-    <TextView
+   <!-- <TextView
         android:id="@+id/mMessge"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:textColor="@color/black"
-        android:gravity="center" />
+        android:gravity="center" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/mtextMessge"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="match_parent"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
+            android:paddingStart="0dp"
+            android:paddingEnd="10dp"
+            android:gravity="center|end" />
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="2sp"
+            android:background="@color/gray"/>
+        <TextView
+            android:id="@+id/mMessge"
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:layout_height="match_parent"
+            android:textSize="17sp"
+            android:paddingStart="10dp"
+            android:paddingEnd="0dp"
+            android:textColor="@color/black"
+            android:gravity="center|start" />
+
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
